[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Menus/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/HUD.png" type="Texture" id=2]
[ext_resource path="res://Scenes/HUD/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/flask_big_green.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Enemies/BossHealth.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/HUD/ManaBar.tscn" type="PackedScene" id=7]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HealthBar3" parent="." instance=ExtResource( 3 )]
position = Vector2( 49, 24 )

[node name="ManaBar" parent="." instance=ExtResource( 7 )]
position = Vector2( 46, 25 )

[node name="Pause" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Control" type="Control" parent="."]
margin_left = 4.0
margin_top = 5.0
margin_right = 127.0
margin_bottom = 94.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 114, 26 )
texture = ExtResource( 2 )

[node name="Potion1" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 47 )
texture = ExtResource( 5 )

[node name="Potion2" type="Sprite" parent="."]
visible = false
position = Vector2( 23, 54 )
texture = ExtResource( 5 )

[node name="Potion3" type="Sprite" parent="."]
visible = false
position = Vector2( 44, 49 )
texture = ExtResource( 5 )

[node name="BossHealth" parent="." instance=ExtResource( 6 )]
visible = false
